@@ -1,13 +1,14 @@
 /*****************************************************************************
- *  $Id: strlcpy.h,v 1.1 2003/02/13 17:54:27 dun Exp $
+ *  $Id: strlcpy.h,v 1.2 2003/02/18 19:46:20 dun Exp $
  *****************************************************************************/
 
-#ifdef HAVE_CONFIG_H
+#if HAVE_CONFIG_H
 #  include "config.h"
 #endif /* HAVE_CONFIG_H */
 
-#ifndef HAVE_STRLCPY
-#define HAVE_STRLCPY
+#if HAVE_STRLCPY
+#else /* !HAVE_STRLCPY */
+#define HAVE_STRLCPY 1
 
 size_t strlcpy(char *dst, const char *src, size_t siz);
 /*
