@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: munge.c,v 1.5 2003/02/17 02:29:41 dun Exp $
+ *  $Id: munge.c,v 1.6 2003/02/18 19:46:20 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -25,7 +25,7 @@
  *****************************************************************************/
 
 
-#ifdef HAVE_CONFIG_H
+#if HAVE_CONFIG_H
 #  include <config.h>
 #endif /* HAVE_CONFIG_H */
 
